fix sqs gallery grid layout issues

--- a/styles/inca.less
+++ b/styles/inca.less
@@ -702,6 +702,12 @@ p > a:first-child {
 }
 */
 
+@media screen and (max-width: 48em) {
+    .sqs-gallery-design-grid-slide {
+        margin: 0 !important;
+    }
+}
+
 /* destination grid items, like in the trip finder */
 .destination-item {
     width: 100%;
